# club_taro_bot2

./: .gitignore  main.py  pyproject.toml  requirements.txt
config/: settings.py
database/: db.py
handlers/: callbacks.py  commands.py  messages.py  wishlist.py
keyboards/: inline.py
utils/: card_monitor.py  dialog_manager.py  helpers.py  profile_builder.py  rank_detector.py  sheets_parser.py
