[project]
name = "club-taro-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "openpyxl>=3.1.5",
    "python-telegram-bot[job-queue]>=22.6",
    "requests>=2.32.5",
    "numpy>=1.26.0",        # ← ДОБАВИТЬ
    "Pillow>=10.0.0",       # ← ДОБАВИТЬ
    "lxml>=5.3.0",
]
